--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.7",
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "vercel": "^41.2.0"
   }
 }
